Port changes from 1.21.11